tests/snapshots/parser__parse_get_with_headers.snap
---
source: tests/parser.rs
description: "\n        get http://localhost {\n        header \"Authorization\" \"Bearer token\"\n        header \"random\" \"tokener Bear\"\n        }"
expression: ast
---
Program(
  items: [
    Request(
      method: GET,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Position(
            value: 13,
            line: 1,
            col: 12,
          ),
          end: Position(
            value: 29,
            line: 1,
            col: 28,
          ),
        ),
      )),
      block: Some(Block(
        statements: [
          Header(
            name: Node(StringLiteral(
              raw: "\"Authorization\"",
              value: "Authorization",
              span: Span(
                start: Position(
                  value: 47,
                  line: 2,
                  col: 15,
                ),
                end: Position(
                  value: 62,
                  line: 2,
                  col: 30,
                ),
              ),
            )),
            value: String(StringLiteral(
              raw: "\"Bearer token\"",
              value: "Bearer token",
              span: Span(
                start: Position(
                  value: 63,
                  line: 2,
                  col: 31,
                ),
                end: Position(
                  value: 77,
                  line: 2,
                  col: 45,
                ),
              ),
            )),
          ),
          Header(
            name: Node(StringLiteral(
              raw: "\"random\"",
              value: "random",
              span: Span(
                start: Position(
                  value: 93,
                  line: 3,
                  col: 15,
                ),
                end: Position(
                  value: 101,
                  line: 3,
                  col: 23,
                ),
              ),
            )),
            value: String(StringLiteral(
              raw: "\"tokener Bear\"",
              value: "tokener Bear",
              span: Span(
                start: Position(
                  value: 102,
                  line: 3,
                  col: 24,
                ),
                end: Position(
                  value: 116,
                  line: 3,
                  col: 38,
                ),
              ),
            )),
          ),
        ],
        span: Span(
          start: Position(
            value: 30,
            line: 1,
            col: 29,
          ),
          end: Position(
            value: 125,
            line: 4,
            col: 8,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 125,
          line: 4,
          col: 8,
        ),
      ),
    ),
  ],
)
