tests/snapshots/parser__parse_global_constant_setting.snap
---
source: tests/parser.rs
description: "set BASE_URL \"stuff\""
expression: ast
---
Program(
  source: "set BASE_URL \"stuff\"",
  items: [
    Set(ConstantDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "BASE_URL",
        start: Position(
          value: 4,
          line: 0,
          col: 4,
        ),
      )),
      value: String(StringLiteral(
        raw: "\"stuff\"",
        value: "stuff",
        span: Span(
          start: Position(
            value: 13,
            line: 0,
            col: 13,
          ),
          end: Position(
            value: 19,
            line: 0,
            col: 19,
          ),
        ),
      )),
    )),
  ],
)
