tests/snapshots/parser__parse_json_object-2.snap
---
source: tests/parser.rs
description: "\nlet o = {\n    akesy: 1323,\n    love: \"you\"\n        //trailing comment\n}"
expression: ast
---
Program(
  source: "\nlet o = {\n    akesy: 1323,\n    love: \"you\"\n        //trailing comment\n}",
  items: [
    Let(
      identifier: Ok(Token(
        kind: Ident,
        text: "o",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: Object((Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 72,
          line: 5,
          col: 1,
        ),
      ), [
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "akesy",
            value: "akesy",
            span: Span(
              start: Position(
                value: 15,
                line: 2,
                col: 4,
              ),
              end: Position(
                value: 20,
                line: 2,
                col: 9,
              ),
            ),
          )),
          value: Number((Span(
            start: Position(
              value: 22,
              line: 2,
              col: 11,
            ),
            end: Position(
              value: 26,
              line: 2,
              col: 15,
            ),
          ), 1323.0)),
        )),
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "love",
            value: "love",
            span: Span(
              start: Position(
                value: 32,
                line: 3,
                col: 4,
              ),
              end: Position(
                value: 36,
                line: 3,
                col: 8,
              ),
            ),
          )),
          value: String(StringLiteral(
            raw: "\"you\"",
            value: "you",
            span: Span(
              start: Position(
                value: 38,
                line: 3,
                col: 10,
              ),
              end: Position(
                value: 43,
                line: 3,
                col: 15,
              ),
            ),
          )),
        )),
      ])),
    ),
  ],
)
