tests/snapshots/parser__parse_json_object.snap
---
source: tests/parser.rs
description: "\nlet o = {\n    key: \"value\",\n    akey: 123,\n    love: \"me\"\n}"
expression: ast
---
Program(
  items: [
    Let(
      identifier: Ok(Token(
        kind: Ident,
        text: "o",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: Object((Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 60,
          line: 5,
          col: 1,
        ),
      ), [
        ObjectEntry(Ok(StringLiteral(
          raw: "key",
          value: "key",
          span: Span(
            start: Position(
              value: 15,
              line: 2,
              col: 4,
            ),
            end: Position(
              value: 18,
              line: 2,
              col: 7,
            ),
          ),
        )), String(StringLiteral(
          raw: "\"value\"",
          value: "value",
          span: Span(
            start: Position(
              value: 20,
              line: 2,
              col: 9,
            ),
            end: Position(
              value: 27,
              line: 2,
              col: 16,
            ),
          ),
        ))),
        ObjectEntry(Ok(StringLiteral(
          raw: "akey",
          value: "akey",
          span: Span(
            start: Position(
              value: 33,
              line: 3,
              col: 4,
            ),
            end: Position(
              value: 37,
              line: 3,
              col: 8,
            ),
          ),
        )), Number(Literal(
          value: "123",
          span: Span(
            start: Position(
              value: 39,
              line: 3,
              col: 10,
            ),
            end: Position(
              value: 42,
              line: 3,
              col: 13,
            ),
          ),
        ))),
        ObjectEntry(Ok(StringLiteral(
          raw: "love",
          value: "love",
          span: Span(
            start: Position(
              value: 48,
              line: 4,
              col: 4,
            ),
            end: Position(
              value: 52,
              line: 4,
              col: 8,
            ),
          ),
        )), String(StringLiteral(
          raw: "\"me\"",
          value: "me",
          span: Span(
            start: Position(
              value: 54,
              line: 4,
              col: 10,
            ),
            end: Position(
              value: 58,
              line: 4,
              col: 14,
            ),
          ),
        ))),
      ])),
    ),
  ],
)
