tests/snapshots/parser__parse_json_object_allowing_trailing_comma.snap
---
source: tests/parser.rs
description: "\nlet o = {\n    key: \"value\",\n    akey: [1, 2, 3,],\n    love: \"me\",\n    \"test\": {a: \"asdf\", b: 1, c: 3,},\n}"
expression: ast
---
Program(
  source: "\nlet o = {\n    key: \"value\",\n    akey: [1, 2, 3,],\n    love: \"me\",\n    \"test\": {a: \"asdf\", b: 1, c: 3,},\n}",
  items: [
    Let(VariableDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "o",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: Object((Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 106,
          line: 6,
          col: 1,
        ),
      ), [
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "key",
            value: "key",
            span: Span(
              start: Position(
                value: 15,
                line: 2,
                col: 4,
              ),
              end: Position(
                value: 18,
                line: 2,
                col: 7,
              ),
            ),
          )),
          value: String(StringLiteral(
            raw: "\"value\"",
            value: "value",
            span: Span(
              start: Position(
                value: 20,
                line: 2,
                col: 9,
              ),
              end: Position(
                value: 27,
                line: 2,
                col: 16,
              ),
            ),
          )),
        )),
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "akey",
            value: "akey",
            span: Span(
              start: Position(
                value: 33,
                line: 3,
                col: 4,
              ),
              end: Position(
                value: 37,
                line: 3,
                col: 8,
              ),
            ),
          )),
          value: Array(ExpressionList(
            span: Span(
              start: Position(
                value: 39,
                line: 3,
                col: 10,
              ),
              end: Position(
                value: 49,
                line: 3,
                col: 20,
              ),
            ),
            exprs: [
              Number((Span(
                start: Position(
                  value: 40,
                  line: 3,
                  col: 11,
                ),
                end: Position(
                  value: 41,
                  line: 3,
                  col: 12,
                ),
              ), 1.0)),
              Number((Span(
                start: Position(
                  value: 43,
                  line: 3,
                  col: 14,
                ),
                end: Position(
                  value: 44,
                  line: 3,
                  col: 15,
                ),
              ), 2.0)),
              Number((Span(
                start: Position(
                  value: 46,
                  line: 3,
                  col: 17,
                ),
                end: Position(
                  value: 47,
                  line: 3,
                  col: 18,
                ),
              ), 3.0)),
            ],
          )),
        )),
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "love",
            value: "love",
            span: Span(
              start: Position(
                value: 55,
                line: 4,
                col: 4,
              ),
              end: Position(
                value: 59,
                line: 4,
                col: 8,
              ),
            ),
          )),
          value: String(StringLiteral(
            raw: "\"me\"",
            value: "me",
            span: Span(
              start: Position(
                value: 61,
                line: 4,
                col: 10,
              ),
              end: Position(
                value: 65,
                line: 4,
                col: 14,
              ),
            ),
          )),
        )),
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "\"test\"",
            value: "test",
            span: Span(
              start: Position(
                value: 71,
                line: 5,
                col: 4,
              ),
              end: Position(
                value: 77,
                line: 5,
                col: 10,
              ),
            ),
          )),
          value: Object((Span(
            start: Position(
              value: 79,
              line: 5,
              col: 12,
            ),
            end: Position(
              value: 103,
              line: 5,
              col: 36,
            ),
          ), [
            Ok(ObjectEntry(
              key: Ok(StringLiteral(
                raw: "a",
                value: "a",
                span: Span(
                  start: Position(
                    value: 80,
                    line: 5,
                    col: 13,
                  ),
                  end: Position(
                    value: 81,
                    line: 5,
                    col: 14,
                  ),
                ),
              )),
              value: String(StringLiteral(
                raw: "\"asdf\"",
                value: "asdf",
                span: Span(
                  start: Position(
                    value: 83,
                    line: 5,
                    col: 16,
                  ),
                  end: Position(
                    value: 89,
                    line: 5,
                    col: 22,
                  ),
                ),
              )),
            )),
            Ok(ObjectEntry(
              key: Ok(StringLiteral(
                raw: "b",
                value: "b",
                span: Span(
                  start: Position(
                    value: 91,
                    line: 5,
                    col: 24,
                  ),
                  end: Position(
                    value: 92,
                    line: 5,
                    col: 25,
                  ),
                ),
              )),
              value: Number((Span(
                start: Position(
                  value: 94,
                  line: 5,
                  col: 27,
                ),
                end: Position(
                  value: 95,
                  line: 5,
                  col: 28,
                ),
              ), 1.0)),
            )),
            Ok(ObjectEntry(
              key: Ok(StringLiteral(
                raw: "c",
                value: "c",
                span: Span(
                  start: Position(
                    value: 97,
                    line: 5,
                    col: 30,
                  ),
                  end: Position(
                    value: 98,
                    line: 5,
                    col: 31,
                  ),
                ),
              )),
              value: Number((Span(
                start: Position(
                  value: 100,
                  line: 5,
                  col: 33,
                ),
                end: Position(
                  value: 101,
                  line: 5,
                  col: 34,
                ),
              ), 3.0)),
            )),
          ])),
        )),
      ])),
    )),
  ],
)
