tests/snapshots/parser__parse_json_object_with_array_keys.snap
---
source: tests/parser.rs
description: "\nlet o = {\n    key: \"value\",\n    akey: \"234va\",\n    oKey: [\"val\", \"val2\"],\n    aoKay: [\"val\", \"123\", {\n        hey: \"yo!\",\n        hello: \"world\"\n    }]\n}"
expression: ast
---
Program(
  items: [
    Let(
      identifier: Identifier(
        name: "o",
        span: Span(
          start: Position(
            value: 5,
            line: 1,
            col: 4,
          ),
          end: Position(
            value: 6,
            line: 1,
            col: 5,
          ),
        ),
      ),
      value: Object((Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 154,
          line: 9,
          col: 1,
        ),
      ), {
        "akey": String(StringLiteral(
          raw: "\"234va\"",
          value: "234va",
          span: Span(
            start: Position(
              value: 39,
              line: 3,
              col: 10,
            ),
            end: Position(
              value: 46,
              line: 3,
              col: 17,
            ),
          ),
        )),
        "aoKay": Array((Span(
          start: Position(
            value: 86,
            line: 5,
            col: 11,
          ),
          end: Position(
            value: 152,
            line: 8,
            col: 6,
          ),
        ), [
          String(StringLiteral(
            raw: "\"val\"",
            value: "val",
            span: Span(
              start: Position(
                value: 87,
                line: 5,
                col: 12,
              ),
              end: Position(
                value: 92,
                line: 5,
                col: 17,
              ),
            ),
          )),
          String(StringLiteral(
            raw: "\"123\"",
            value: "123",
            span: Span(
              start: Position(
                value: 94,
                line: 5,
                col: 19,
              ),
              end: Position(
                value: 99,
                line: 5,
                col: 24,
              ),
            ),
          )),
          Object((Span(
            start: Position(
              value: 101,
              line: 5,
              col: 26,
            ),
            end: Position(
              value: 151,
              line: 8,
              col: 5,
            ),
          ), {
            "hello": String(StringLiteral(
              raw: "\"world\"",
              value: "world",
              span: Span(
                start: Position(
                  value: 138,
                  line: 7,
                  col: 15,
                ),
                end: Position(
                  value: 145,
                  line: 7,
                  col: 22,
                ),
              ),
            )),
            "hey": String(StringLiteral(
              raw: "\"yo!\"",
              value: "yo!",
              span: Span(
                start: Position(
                  value: 116,
                  line: 6,
                  col: 13,
                ),
                end: Position(
                  value: 121,
                  line: 6,
                  col: 18,
                ),
              ),
            )),
          })),
        ])),
        "key": String(StringLiteral(
          raw: "\"value\"",
          value: "value",
          span: Span(
            start: Position(
              value: 20,
              line: 2,
              col: 9,
            ),
            end: Position(
              value: 27,
              line: 2,
              col: 16,
            ),
          ),
        )),
        "oKey": Array((Span(
          start: Position(
            value: 58,
            line: 4,
            col: 10,
          ),
          end: Position(
            value: 73,
            line: 4,
            col: 25,
          ),
        ), [
          String(StringLiteral(
            raw: "\"val\"",
            value: "val",
            span: Span(
              start: Position(
                value: 59,
                line: 4,
                col: 11,
              ),
              end: Position(
                value: 64,
                line: 4,
                col: 16,
              ),
            ),
          )),
          String(StringLiteral(
            raw: "\"val2\"",
            value: "val2",
            span: Span(
              start: Position(
                value: 66,
                line: 4,
                col: 18,
              ),
              end: Position(
                value: 72,
                line: 4,
                col: 24,
              ),
            ),
          )),
        ])),
      })),
    ),
  ],
)
